deployments/azure-pipelines/templates/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: __namespace__
  labels:
    name: __namespace__
