deployments/azure-pipelines/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: __imageRepository__
  namespace: __namespace__
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: __targetPort__
  selector:
    app: __imageRepository__
